headers/sqlucode.h

SQLRETURN SQL_API SQLColAttributesA (
    SQLHSTMT          hstmt,
    SQLUSMALLINT      icol,
    SQLUSMALLINT      fDescType,
    SQLPOINTER          rgbDesc,
    SQLSMALLINT          cbDescMax,
    SQLSMALLINT        * pcbDesc,
    SQLLEN        * pfDesc);
SQLRETURN SQL_API SQLConnectA (
    SQLHDBC          hdbc,
    SQLCHAR        * szDSN,
    SQLSMALLINT          cbDSN,
    SQLCHAR        * szUID,
    SQLSMALLINT          cbUID,
    SQLCHAR        * szAuthStr,
    SQLSMALLINT          cbAuthStr);
SQLRETURN SQL_API SQLDescribeColA (
    SQLHSTMT          hstmt,
    SQLUSMALLINT      icol,
    SQLCHAR        * szColName,
    SQLSMALLINT          cbColNameMax,
    SQLSMALLINT        * pcbColName,
    SQLSMALLINT        * pfSqlType,
    SQLULEN        * pcbColDef,
    SQLSMALLINT        * pibScale,
    SQLSMALLINT        * pfNullable);
SQLRETURN SQL_API SQLErrorA (
    SQLHENV          henv,
    SQLHDBC          hdbc,
    SQLHSTMT          hstmt,
    SQLCHAR        * szSqlState,
    SQLINTEGER        * pfNativeError,
    SQLCHAR        * szErrorMsg,
    SQLSMALLINT          cbErrorMsgMax,
    SQLSMALLINT        * pcbErrorMsg);
SQLRETURN SQL_API SQLExecDirectA (
    SQLHSTMT          hstmt,
    SQLCHAR        * szSqlStr,
    SQLINTEGER          cbSqlStr);
SQLRETURN SQL_API SQLGetConnectAttrA (
    SQLHDBC          hdbc,
    SQLINTEGER          fAttribute,
    SQLPOINTER          rgbValue,
    SQLINTEGER          cbValueMax,
    SQLINTEGER        * pcbValue);
SQLRETURN SQL_API SQLGetCursorNameA (
    SQLHSTMT          hstmt,
    SQLCHAR        * szCursor,
    SQLSMALLINT          cbCursorMax,
    SQLSMALLINT        * pcbCursor);
SQLRETURN SQL_API SQLSetDescFieldA (
    SQLHDESC          DescriptorHandle,
    SQLSMALLINT          RecNumber,
    SQLSMALLINT          FieldIdentifier,
    SQLPOINTER          Value,
    SQLINTEGER          BufferLength);
SQLRETURN SQL_API SQLGetDescFieldA (
    SQLHDESC          hdesc,
    SQLSMALLINT          iRecord,
    SQLSMALLINT          iField,
    SQLPOINTER          rgbValue,
    SQLINTEGER          cbValueMax,
    SQLINTEGER        * pcbValue);
SQLRETURN SQL_API SQLGetDescRecA (
    SQLHDESC          hdesc,
    SQLSMALLINT          iRecord,
    SQLCHAR        * szName,
    SQLSMALLINT          cbNameMax,
    SQLSMALLINT        * pcbName,
    SQLSMALLINT        * pfType,
    SQLSMALLINT        * pfSubType,
    SQLLEN        * pLength,
    SQLSMALLINT        * pPrecision,
    SQLSMALLINT        * pScale,
    SQLSMALLINT        * pNullable);
SQLRETURN SQL_API SQLGetDiagFieldA (
    SQLSMALLINT          fHandleType,
    SQLHANDLE          handle,
    SQLSMALLINT          iRecord,
    SQLSMALLINT          fDiagField,
    SQLPOINTER          rgbDiagInfo,
    SQLSMALLINT          cbDiagInfoMax,
    SQLSMALLINT        * pcbDiagInfo);
SQLRETURN SQL_API SQLGetDiagRecA (
    SQLSMALLINT          fHandleType,
    SQLHANDLE          handle,
    SQLSMALLINT          iRecord,
    SQLCHAR        * szSqlState,
    SQLINTEGER        * pfNativeError,
    SQLCHAR        * szErrorMsg,
    SQLSMALLINT          cbErrorMsgMax,
    SQLSMALLINT        * pcbErrorMsg);
SQLRETURN SQL_API SQLPrepareA (
    SQLHSTMT          hstmt,
    SQLCHAR        * szSqlStr,
    SQLINTEGER          cbSqlStr);
SQLRETURN SQL_API SQLSetConnectAttrA (
    SQLHDBC          hdbc,
    SQLINTEGER          fAttribute,
    SQLPOINTER          rgbValue,
    SQLINTEGER          cbValue);
SQLRETURN SQL_API SQLSetCursorNameA (
    SQLHSTMT          hstmt,
    SQLCHAR        * szCursor,
    SQLSMALLINT          cbCursor);
SQLRETURN SQL_API SQLColumnsA (
    SQLHSTMT          hstmt,
    SQLCHAR        * szCatalogName,
    SQLSMALLINT          cbCatalogName,
    SQLCHAR        * szSchemaName,
    SQLSMALLINT          cbSchemaName,
    SQLCHAR        * szTableName,
    SQLSMALLINT          cbTableName,
    SQLCHAR        * szColumnName,
    SQLSMALLINT          cbColumnName);
SQLRETURN SQL_API SQLGetConnectOptionA (
    SQLHDBC          hdbc,
    SQLUSMALLINT      fOption,
    SQLPOINTER          pvParam);
SQLRETURN SQL_API SQLGetInfoA (
    SQLHDBC          hdbc,
    SQLUSMALLINT      fInfoType,
    SQLPOINTER          rgbInfoValue,
    SQLSMALLINT          cbInfoValueMax,
    SQLSMALLINT        * pcbInfoValue);
SQLRETURN SQL_API SQLGetTypeInfoA (
    SQLHSTMT          StatementHandle,
    SQLSMALLINT          DataType);
SQLRETURN SQL_API SQLSetConnectOptionA (
    SQLHDBC          hdbc,
    SQLUSMALLINT      fOption,
    SQLULEN          vParam);
SQLRETURN SQL_API SQLSpecialColumnsA (
    SQLHSTMT          hstmt,
    SQLUSMALLINT      fColType,
    SQLCHAR        * szCatalogName,
    SQLSMALLINT          cbCatalogName,
    SQLCHAR        * szSchemaName,
    SQLSMALLINT          cbSchemaName,
    SQLCHAR        * szTableName,
    SQLSMALLINT          cbTableName,
    SQLUSMALLINT      fScope,
    SQLUSMALLINT      fNullable);
SQLRETURN SQL_API SQLStatisticsA (
    SQLHSTMT          hstmt,
    SQLCHAR        * szCatalogName,
    SQLSMALLINT          cbCatalogName,
    SQLCHAR        * szSchemaName,
    SQLSMALLINT          cbSchemaName,
    SQLCHAR        * szTableName,
    SQLSMALLINT          cbTableName,
    SQLUSMALLINT      fUnique,
    SQLUSMALLINT      fAccuracy);
SQLRETURN SQL_API SQLTablesA (
    SQLHSTMT          hstmt,
    SQLCHAR        * szCatalogName,
    SQLSMALLINT          cbCatalogName,
    SQLCHAR        * szSchemaName,
    SQLSMALLINT          cbSchemaName,
    SQLCHAR        * szTableName,
    SQLSMALLINT          cbTableName,
    SQLCHAR        * szTableType,
    SQLSMALLINT          cbTableType);
SQLRETURN SQL_API SQLDataSourcesA (
    SQLHENV          henv,
    SQLUSMALLINT      fDirection,
    SQLCHAR        * szDSN,
    SQLSMALLINT          cbDSNMax,
    SQLSMALLINT        * pcbDSN,
    SQLCHAR        * szDescription,
    SQLSMALLINT          cbDescriptionMax,
    SQLSMALLINT        * pcbDescription);
SQLRETURN SQL_API SQLDriverConnectA (
    SQLHDBC          hdbc,
    SQLHWND          hwnd,
    SQLCHAR        * szConnStrIn,
    SQLSMALLINT          cbConnStrIn,
    SQLCHAR        * szConnStrOut,
    SQLSMALLINT          cbConnStrOutMax,
    SQLSMALLINT        * pcbConnStrOut,
    SQLUSMALLINT      fDriverCompletion);