sql.py


        if hasattr(self.ODBC_DRIVER, "SQLColAttributesA"):
            self.ODBC_DRIVER.SQLColAttributesA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLColAttributesA.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLUSMALLINT, self.SQLPOINTER, self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLLEN),)
            self.SQLColAttributesA = self.ODBC_DRIVER.SQLColAttributesA
        else:
            self.SQLColAttributesA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLConnectA"):
            self.ODBC_DRIVER.SQLConnectA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLConnectA.argtypes = (self.SQLHDBC, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT,)
            self.SQLConnectA = self.ODBC_DRIVER.SQLConnectA
        else:
            self.SQLConnectA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLDescribeColA"):
            self.ODBC_DRIVER.SQLDescribeColA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLDescribeColA.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLULEN), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLDescribeColA = self.ODBC_DRIVER.SQLDescribeColA
        else:
            self.SQLDescribeColA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLErrorA"):
            self.ODBC_DRIVER.SQLErrorA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLErrorA.argtypes = (self.SQLHENV, self.SQLHDBC, self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), ctypes.POINTER(self.SQLINTEGER), ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLErrorA = self.ODBC_DRIVER.SQLErrorA
        else:
            self.SQLErrorA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLExecDirectA"):
            self.ODBC_DRIVER.SQLExecDirectA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLExecDirectA.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLINTEGER,)
            self.SQLExecDirectA = self.ODBC_DRIVER.SQLExecDirectA
        else:
            self.SQLExecDirectA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetConnectAttrA"):
            self.ODBC_DRIVER.SQLGetConnectAttrA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetConnectAttrA.argtypes = (self.SQLHDBC, self.SQLINTEGER, self.SQLPOINTER, self.SQLINTEGER, ctypes.POINTER(self.SQLINTEGER),)
            self.SQLGetConnectAttrA = self.ODBC_DRIVER.SQLGetConnectAttrA
        else:
            self.SQLGetConnectAttrA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetCursorNameA"):
            self.ODBC_DRIVER.SQLGetCursorNameA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetCursorNameA.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetCursorNameA = self.ODBC_DRIVER.SQLGetCursorNameA
        else:
            self.SQLGetCursorNameA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetDescFieldA"):
            self.ODBC_DRIVER.SQLSetDescFieldA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetDescFieldA.argtypes = (self.SQLHDESC, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLPOINTER, self.SQLINTEGER,)
            self.SQLSetDescFieldA = self.ODBC_DRIVER.SQLSetDescFieldA
        else:
            self.SQLSetDescFieldA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetDescFieldA"):
            self.ODBC_DRIVER.SQLGetDescFieldA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetDescFieldA.argtypes = (self.SQLHDESC, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLPOINTER, self.SQLINTEGER, ctypes.POINTER(self.SQLINTEGER),)
            self.SQLGetDescFieldA = self.ODBC_DRIVER.SQLGetDescFieldA
        else:
            self.SQLGetDescFieldA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetDescRecA"):
            self.ODBC_DRIVER.SQLGetDescRecA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetDescRecA.argtypes = (self.SQLHDESC, self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLLEN), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetDescRecA = self.ODBC_DRIVER.SQLGetDescRecA
        else:
            self.SQLGetDescRecA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetDiagFieldA"):
            self.ODBC_DRIVER.SQLGetDiagFieldA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetDiagFieldA.argtypes = (self.SQLSMALLINT, self.SQLHANDLE, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLPOINTER, self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetDiagFieldA = self.ODBC_DRIVER.SQLGetDiagFieldA
        else:
            self.SQLGetDiagFieldA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetDiagRecA"):
            self.ODBC_DRIVER.SQLGetDiagRecA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetDiagRecA.argtypes = (self.SQLSMALLINT, self.SQLHANDLE, self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), ctypes.POINTER(self.SQLINTEGER), ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetDiagRecA = self.ODBC_DRIVER.SQLGetDiagRecA
        else:
            self.SQLGetDiagRecA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLPrepareA"):
            self.ODBC_DRIVER.SQLPrepareA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLPrepareA.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLINTEGER,)
            self.SQLPrepareA = self.ODBC_DRIVER.SQLPrepareA
        else:
            self.SQLPrepareA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetConnectAttrA"):
            self.ODBC_DRIVER.SQLSetConnectAttrA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetConnectAttrA.argtypes = (self.SQLHDBC, self.SQLINTEGER, self.SQLPOINTER, self.SQLINTEGER,)
            self.SQLSetConnectAttrA = self.ODBC_DRIVER.SQLSetConnectAttrA
        else:
            self.SQLSetConnectAttrA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetCursorNameA"):
            self.ODBC_DRIVER.SQLSetCursorNameA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetCursorNameA.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT,)
            self.SQLSetCursorNameA = self.ODBC_DRIVER.SQLSetCursorNameA
        else:
            self.SQLSetCursorNameA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLColumnsA"):
            self.ODBC_DRIVER.SQLColumnsA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLColumnsA.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT,)
            self.SQLColumnsA = self.ODBC_DRIVER.SQLColumnsA
        else:
            self.SQLColumnsA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetConnectOptionA"):
            self.ODBC_DRIVER.SQLGetConnectOptionA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetConnectOptionA.argtypes = (self.SQLHDBC, self.SQLUSMALLINT, self.SQLPOINTER,)
            self.SQLGetConnectOptionA = self.ODBC_DRIVER.SQLGetConnectOptionA
        else:
            self.SQLGetConnectOptionA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetInfoA"):
            self.ODBC_DRIVER.SQLGetInfoA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetInfoA.argtypes = (self.SQLHDBC, self.SQLUSMALLINT, self.SQLPOINTER, self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetInfoA = self.ODBC_DRIVER.SQLGetInfoA
        else:
            self.SQLGetInfoA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetTypeInfoA"):
            self.ODBC_DRIVER.SQLGetTypeInfoA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetTypeInfoA.argtypes = (self.SQLHSTMT, self.SQLSMALLINT,)
            self.SQLGetTypeInfoA = self.ODBC_DRIVER.SQLGetTypeInfoA
        else:
            self.SQLGetTypeInfoA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetConnectOptionA"):
            self.ODBC_DRIVER.SQLSetConnectOptionA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetConnectOptionA.argtypes = (self.SQLHDBC, self.SQLUSMALLINT, self.SQLULEN,)
            self.SQLSetConnectOptionA = self.ODBC_DRIVER.SQLSetConnectOptionA
        else:
            self.SQLSetConnectOptionA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSpecialColumnsA"):
            self.ODBC_DRIVER.SQLSpecialColumnsA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSpecialColumnsA.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, self.SQLUSMALLINT, self.SQLUSMALLINT,)
            self.SQLSpecialColumnsA = self.ODBC_DRIVER.SQLSpecialColumnsA
        else:
            self.SQLSpecialColumnsA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLStatisticsA"):
            self.ODBC_DRIVER.SQLStatisticsA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLStatisticsA.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, self.SQLUSMALLINT, self.SQLUSMALLINT,)
            self.SQLStatisticsA = self.ODBC_DRIVER.SQLStatisticsA
        else:
            self.SQLStatisticsA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLTablesA"):
            self.ODBC_DRIVER.SQLTablesA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLTablesA.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT,)
            self.SQLTablesA = self.ODBC_DRIVER.SQLTablesA
        else:
            self.SQLTablesA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLDataSourcesA"):
            self.ODBC_DRIVER.SQLDataSourcesA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLDataSourcesA.argtypes = (self.SQLHENV, self.SQLUSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLDataSourcesA = self.ODBC_DRIVER.SQLDataSourcesA
        else:
            self.SQLDataSourcesA = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLDriverConnectA"):
            self.ODBC_DRIVER.SQLDriverConnectA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLDriverConnectA.argtypes = (self.SQLHDBC, self.SQLHWND, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), self.SQLUSMALLINT,)
            self.SQLDriverConnectA = self.ODBC_DRIVER.SQLDriverConnectA
        else:
            self.SQLDriverConnectA = self.UnimplementedSQLFunction
